--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,50 @@
-@'
-/frontend/node_modules
-/backend/node_modules
-/frontend/.next
-**/keys/*.json
-*.env
-*.env.*.local
-*.zip
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production build
+/build
+/dist
+/.next
+/out
+
+# misc
 .DS_Store
-'@ | Out-File -Encoding utf8 .gitignore
-frontend/.env.local
+Thumbs.db
+
+# debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# local env files (สำคัญสุด ห้ามหลุดขึ้น Git)
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# editor settings
+.vscode/
+.idea/
+*.swp
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+# backend logs
+/logs
+*.log
+logs/*.log
+
+# cache
+/.cache
+/.parcel-cache
+/.turbo
+/.vercel
